5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1764_674.log
== TEST (2019-05-21 16:56:12) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = int(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

print (vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:56:40) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

print (vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:58:45) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))
# Primeiro elemento do vetor
# Ultimo elemento do vetor
# Maior elemento do vetor
# Menor elemento do vetor
# Soma dos elementos do vetor
# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:00:16) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (med(vetor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:01:11) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (sum(vetor / size(vetor))
-- ERROR:
File "XXXX", line 31
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:01:25) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (sum(vetor) / size(vetor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:01:56) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round(sum(vetor) / size(vetor)),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:02:15) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round(sum(vetor) / size(vetor),2)
-- ERROR:
File "XXXX", line 31
    
                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:02:44) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round((sum(vetor) / (size(vetor)),2)
-- ERROR:
File "XXXX", line 31
    
                                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:04:04) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
media = (sum(vetor) / (size(vetor)
print (round(media,2))
-- ERROR:
File "XXXX", line 31
    print (round(media,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:04:26) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
media = (sum(vetor) / (size(vetor)
print round(media,2)
-- ERROR:
File "XXXX", line 31
    print round(media,2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:04:47) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
media = (sum(vetor) / (size(vetor)
print (round(media,2))
-- ERROR:
File "XXXX", line 31
    print (round(media,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:05:26) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
media = (sum(vetor) / (size(vetor))
print (round(media,2))
-- ERROR:
File "XXXX", line 31
    print (round(media,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:05:49) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
media = sum(vetor) / size(vetor)
print (round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:06:49) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor


# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:09:25) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor
print (vetor[0])

# Ultimo elemento do vetor
print (vetor(4))

# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:09:47) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor
print (vetor[0])

# Ultimo elemento do vetor
print (vetor[4])

# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:10:14) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor
print (vetor[0])

# Ultimo elemento do vetor
print (vetor[3])

# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:10:36) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor
print (vetor[0])

# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:11:33) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor
print (vetor[0])

# Ultimo elemento do vetor


# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:12:45) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor

# Ultimo elemento do vetor

# Maior elemento do vetor
print max(vetor)

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round(sum(vetor) / size(vetor),2))

-- ERROR:
File "XXXX", line 19
    print max(vetor)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:13:26) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor

# Ultimo elemento do vetor

# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:15:23) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print (size(vetor))

# Primeiro elemento do vetor

# Ultimo elemento do vetor

# Maior elemento do vetor
print (max(vetor))

# Menor elemento do vetor
print (min(vetor))

# Soma dos elementos do vetor
print (sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print (round(sum(vetor) / size(vetor),2))

-- EXECUTION TIME:
0.442982
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
937
10.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:16:15) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:16:29) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- EXECUTION TIME:
0.664921
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:16:47) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:16:56) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- EXECUTION TIME:
0.368648
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:17:11) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array([vetor])

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:18:41) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:18:54) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- EXECUTION TIME:
0.587873
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:19:07) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:19:43) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = int(input("Informe o conjunto de numeros: "))

vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:19:58) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- EXECUTION TIME:
0.342473
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:20:01) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:20:20) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))

-- EXECUTION TIME:
0.363347
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:06:58) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))
print (round(mean(vetor)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:07:08) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))
print (round(mean(vetor)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:11:44) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = array(eval(input("Informe o conjunto de numeros: ")))

#vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))
#print (round(mean(vetor)))

-- EXECUTION TIME:
0.443417
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:02:54) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = array(eval(input("Informe o conjunto de numeros: ")))

#vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))
#print (round(mean(vetor)))

-- EXECUTION TIME:
0.564749
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:30:23) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = eval(input("Informe o conjunto de numeros: "))

vetor = array(vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))
#print (round(mean(vetor)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:31:23) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = array(eval(input("Informe o conjunto de numeros: "))

#vetor = (vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))
#print (round(mean(vetor)))

-- EXECUTION TIME:
0.189047
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 12
    print(size(vetor))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:31:38) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = array(eval(input("Informe o conjunto de numeros: "))

#vetor = (vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))
#print (round(mean(vetor)))

-- ERROR:
File "XXXX", line 12
    print(size(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:32:26) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = array(eval(input("Informe o conjunto de numeros: "))

#vetor = (vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))
#print (round(mean(vetor)))

-- EXECUTION TIME:
0.198124
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 12
    print(size(vetor))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:32:54) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

vetor = array(eval(input("Informe o conjunto de numeros: ")))

#vetor = (vetor)

# Quantidade de elementos do vetor
print(size(vetor))

# Primeiro elemento do vetor
print(vetor[0])

# Ultimo elemento do vetor
print(vetor[-1])

# Maior elemento do vetor
print(max(vetor))

# Menor elemento do vetor
print(min(vetor))

# Soma dos elementos do vetor
print(sum(vetor))

# Media aritmetica dos elementos do vetor, com até duas casas decimais de precisão. 
print(round(sum(vetor) / size(vetor),2))
#print (round(mean(vetor)))

-- EXECUTION TIME:
0.54551
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
